<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/image_login"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2"
            app:srcCompat="@drawable/login_image" />

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/title_login_page"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edEmailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.example.mystoryapp.view.customview.MyEmailEditText
                android:id="@+id/edLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="50dp"
                android:paddingEnd="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edEmailLayout"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.example.mystoryapp.view.customview.MyPasswordEditText
                android:id="@+id/edLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:paddingStart="50dp"
                android:paddingEnd="10dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edPasswordLayout" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.4"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal2"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvMoveToSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_marginTop="80dp"
            android:text="@string/signup_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintVertical_bias="0.111" />

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/sign_up"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvMoveToSignup"
            app:layout_constraintStart_toEndOf="@+id/tvMoveToSignup"
            app:layout_constraintTop_toTopOf="@+id/tvMoveToSignup"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>