<resources>
    <string name="app_name">MyStory</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="title_signup_page">Sign Up</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="title_login_page">Login</string>
    <string name="english_lang">English</string>
    <string name="indonesian_lang">Indonesian</string>
    <string name="settings_title">Settings</string>
    <string name="logout_title">Logout</string>

    <string name="appwidget_text">List Story</string>
    <string name="app_widget_description">List story widget</string>
    <string name="empty_text">No Data</string>
    <string name="upload_story_title">Upload Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="story_by">Story by</string>
    <string name="image_login">Image Login</string>
    <string name="image_signup">Image Signup</string>
    <string name="name">Name</string>
    <string name="register_title_alert">Register</string>
    <string name="next_action">Next</string>
    <string name="signup_message">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_title_alert">Login</string>
    <string name="login_message_alert">Login Success!</string>
    <string name="image_story">Image Story</string>
    <string name="image_size_limit">Image size exceeds 1MB limit</string>
    <string name="empty_image">Empty Image</string>
    <string name="permission_request_granted">Permission Request Granted</string>
    <string name="permission_request_denied">Permission Request Denied</string>
    <string name="no_media_selected">No media selected.</string>
    <string name="button_to_add_story">Button to Add Story</string>
    <string name="no_data">No data</string>
    <string name="button_image_capture">Button Image Capture</string>
    <string name="button_image_switch_camera">Button Image Switch Camera</string>
    <string name="logout_confirmation">Are you sure to logout?</string>
    <string name="logout">Logout</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="retry" translatable="false">Retry</string>
    <string name="bearer_token" translatable="false">Bearer %1$s</string>
    <string name="style_parsing_failed" translatable="false">Style parsing failed.</string>
    <string name="can_t_find_style_error" translatable="false">"Can't find style. Error: "</string>
    <string name="location_text">Location</string>
</resources>