...
        <include
            android:id="@+id/toolbarMain"
            layout="@layout/toolbar_layout" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListStory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...
